# tmpcb-macropad

./: .gitignore  board.json  macropad.hprj  notes.md  top_block.json  top_sch.json
board/: board.json  macropad.hprj  top_block.json  top_sch.json
board/pool/entities/cache/: 0be56b79-a6fa-46c8-9905-20bf60e21786.json
board/pool/parts/cache/: 3b7c812b-8df6-4592-9108-3de2692c495f.json  4fcd3692-1c30-4fa9-ba2f-260f5526c0bc.json  c35ce467-7b6f-4a01-8095-0d99127eeead.json  eed5d61c-ecaf-4db1-bb66-9c938e023f95.json
firmware/: README.md  firmware.nimble
firmware/csource/: CMakeLists.txt
firmware/src/: firmware.nim  inpi55.nim  inpi55.pio  scheduler.nim  usb.nim  usb_descriptors.c  usb_descriptors.nim  veml7700.nim
pool/entities/cache/: 0985bd20-e2b7-44d0-b119-07bc1d793b6c.json  5d40ddbf-aa44-4d23-9a01-9828ec971020.json  6502ffca-2ce7-46a6-bcb5-51a4bfe4f098.json  6d85b5e7-7b67-400b-9943-7be7e85629cf.json
pool/parts/cache/: 1213fd58-59fa-46c4-b3ce-75421b13bb0b.json  1abb52d1-2733-4adb-a6ae-38555ad81018.json  4fcd3692-1c30-4fa9-ba2f-260f5526c0bc.json  50ce9512-04a1-4dd2-a8d5-734f38cca319.json  99db78b3-1f3a-4dde-8b20-0bfb60853104.json  aee40bb6-8f53-42a0-a640-a180a30af116.json  c9a9cc0e-c3e8-481e-bba2-8f83fc23417a.json  eb6d204a-a07b-4c98-bd54-8823f5776384.json
pool/symbols/cache/: 5f5d4958-463c-4a37-9a0b-f6e97958e281.json  ba5a81b0-d529-42f9-a7be-3188c38cad8b.json  bb316353-28ab-4f52-8c65-490ad28a3d85.json
pool/units/cache/: a16798c5-ad01-4c73-aef6-0012848cb775.json  ee58cc48-986f-4bb2-8f73-5df2daa99822.json
scripts/: gen-pico.py
(+5 files in other folders)
